[gd_scene load_steps=38 format=3 uid="uid://nywws6qsp2wm"]

[ext_resource type="PackedScene" uid="uid://c61gs33bp6rfg" path="res://assets/enemies/fusil_enemy.glb" id="1_osdk4"]
[ext_resource type="Script" uid="uid://cdxh2ufgh3lxl" path="res://assets/enemies/fusil_enemy.gd" id="2_us80n"]
[ext_resource type="ArrayMesh" uid="uid://dssc4xygd45qu" path="res://assets/enemies/exclamation_mark.obj" id="3_j1wi6"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_shx16"]
radius = 0.398757

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_oywjc"]
radius = 0.591704
height = 1.95896

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_rjbg5"]
resource_name = "Material.007"
cull_mode = 2
albedo_color = Color(0, 0, 0, 1)
roughness = 0.5

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_jlp0p"]
resource_name = "Material.007"
cull_mode = 2
albedo_color = Color(0, 0, 0, 1)
roughness = 0.5

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_54cco"]
resource_name = "Material.007"
cull_mode = 2
albedo_color = Color(0, 0, 0, 1)
roughness = 0.5

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1s7kv"]
resource_name = "Material.006"
cull_mode = 2
albedo_color = Color(0.831372, 0.686274, 0.215687, 1)
metallic = 0.992126
roughness = 0.5

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_xl24l"]
resource_name = "Material.005"
cull_mode = 2
albedo_color = Color(0.721569, 0.45098, 0.2, 1)
metallic = 1.0
roughness = 0.5

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_wlet6"]
resource_name = "Material.006"
cull_mode = 2
albedo_color = Color(0.831372, 0.686274, 0.215687, 1)
metallic = 0.992126
roughness = 0.5

[sub_resource type="Animation" id="Animation_70lpi"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape3D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape3D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.00708961, 2, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Armature/Skeleton3D/Sphere_004/RemoteTransform3D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Armature/Skeleton3D/Sphere_004/RemoteTransform3D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 4.26998, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Armature/head_ray:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-4.64461e-07, 5.73943, 0.0152628)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Armature/head_ray:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-1.5708, 0, 0)]
}

[sub_resource type="Animation" id="Animation_1oola"]
resource_name = "tilt"
length = 0.8333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape3D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-1.11841, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape3D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.8333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 2, 0), Vector3(0.00708961, 1.70794, -1.0967)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Armature/Skeleton3D/Sphere_004/RemoteTransform3D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.8333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(1.32994, 0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Armature/Skeleton3D/Sphere_004/RemoteTransform3D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.8333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 4.846, 0), Vector3(0, 1.8, 3.651)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Armature/head_ray:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.8333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-4.64461e-07, 6.42633, 0.00385169), Vector3(-4.64461e-07, 1.8907, 5.26326)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Armature/head_ray:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.8333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-1.5708, 0, 0), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_2hvos"]
resource_name = "untilt"
length = 0.8333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.007, 1.708, -1.097), Vector3(0.00708961, 2, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape3D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.8333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-1.11876, 0, 0), Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Armature/Skeleton3D/Sphere_004/RemoteTransform3D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.8333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(1.32994, 0, 0), Vector3(0, 0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Armature/Skeleton3D/Sphere_004/RemoteTransform3D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.8333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 1.8, 3.651), Vector3(0, 4.26998, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Armature/head_ray:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.8333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-4.64461e-07, 1.8907, 5.26326), Vector3(-5.65799e-09, 6.0839, 0.015162)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Armature/head_ray:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.8333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-1.5708, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_s3rjt"]
_data = {
&"RESET": SubResource("Animation_70lpi"),
&"tilt": SubResource("Animation_1oola"),
&"untilt": SubResource("Animation_2hvos")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_aw2hj"]
animation = &"run"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_dcxm3"]
animation = &"tilt"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_1s7kv"]
animation = &"untilt"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_nlmqw"]
animation = &"walk"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_qr2kn"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_jv1ra"]
advance_mode = 2
advance_condition = &"is_tilting"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_8nksv"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_xl24l"]
advance_mode = 2
advance_condition = &"has_appeared"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_wlet6"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_1s7kv"]
advance_mode = 2
advance_condition = &"has_appeared"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_ktfy6"]
states/End/position = Vector2(870, 105.656)
states/Start/position = Vector2(245, 103)
states/run/node = SubResource("AnimationNodeAnimation_aw2hj")
states/run/position = Vector2(577, 198.656)
states/tilt/node = SubResource("AnimationNodeAnimation_dcxm3")
states/tilt/position = Vector2(447, 198.656)
states/untilt/node = SubResource("AnimationNodeAnimation_1s7kv")
states/untilt/position = Vector2(577, 103)
states/walk/node = SubResource("AnimationNodeAnimation_nlmqw")
states/walk/position = Vector2(447, 103)
transitions = ["Start", "walk", SubResource("AnimationNodeStateMachineTransition_qr2kn"), "walk", "tilt", SubResource("AnimationNodeStateMachineTransition_jv1ra"), "tilt", "run", SubResource("AnimationNodeStateMachineTransition_8nksv"), "run", "untilt", SubResource("AnimationNodeStateMachineTransition_xl24l"), "untilt", "walk", SubResource("AnimationNodeStateMachineTransition_wlet6"), "tilt", "untilt", SubResource("AnimationNodeStateMachineTransition_1s7kv")]
graph_offset = Vector2(-27, 21.6558)

[sub_resource type="Animation" id="Animation_t82i6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_jwdev"]
resource_name = "exclamation_mark"
length = 1.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 1, 1.13333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0.3, 0.3, 0.3), Vector3(0.2, 0.2, 0.2), Vector3(0.2, 0.2, 0.2), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 5, -1), Vector3(0, 5.5, -1), Vector3(0, 5, -1), Vector3(0, 5, -1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vq8e1"]
_data = {
&"RESET": SubResource("Animation_t82i6"),
&"exclamation_mark": SubResource("Animation_jwdev")
}

[sub_resource type="Curve" id="Curve_1s7kv"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.556989, 1), 0.0, 0.0, 0, 0, Vector2(0.860215, 0.604943), -3.37466, -3.37466, 0, 0, Vector2(0.991398, 0.0360616), -6.32748, 0.0, 0, 0]
point_count = 4

[sub_resource type="CurveTexture" id="CurveTexture_1s7kv"]
curve = SubResource("Curve_1s7kv")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_xl24l"]
angle_min = 1.07288e-05
angle_max = 1.07288e-05
spread = 180.0
initial_velocity_min = 1.0
initial_velocity_max = 5.0
gravity = Vector3(0, 4, 0)
scale_min = 0.6
scale_max = 1.2
scale_curve = SubResource("CurveTexture_1s7kv")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3omdm"]
resource_name = "Material.002"
albedo_color = Color(0.831373, 0.686275, 0.215686, 1)
metallic = 0.992126
roughness = 0.5

[sub_resource type="SphereMesh" id="SphereMesh_wlet6"]
material = SubResource("StandardMaterial3D_3omdm")
radius = 0.05
height = 0.1

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_rjbg5"]
angle_min = 1.07288e-05
angle_max = 1.07288e-05
spread = 180.0
initial_velocity_min = 1.0
initial_velocity_max = 5.0
gravity = Vector3(0, 4, 0)
scale_min = 0.6
scale_max = 1.2
scale_curve = SubResource("CurveTexture_1s7kv")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_lluxs"]
resource_name = "Material.004"
cull_mode = 2
albedo_color = Color(0.721569, 0.45098, 0.2, 1)
metallic = 1.0
roughness = 0.5

[sub_resource type="SphereMesh" id="SphereMesh_3omdm"]
material = SubResource("StandardMaterial3D_lluxs")
radius = 0.035
height = 0.07

[node name="fusil_enemy" groups=["enemies", "fusil_enemies"] instance=ExtResource("1_osdk4")]
collision_layer = 8
collision_mask = 27
script = ExtResource("2_us80n")

[node name="CollisionShape3D" type="CollisionShape3D" parent="." index="0"]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0.00708961, 2, 0)
shape = SubResource("CapsuleShape3D_shx16")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="." index="1"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 4.87098, 0.021)
shape = SubResource("CapsuleShape3D_oywjc")

[node name="Armature" parent="." index="2"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0.601, 0.021)

[node name="RayCast3D" type="RayCast3D" parent="Armature" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.00694895, 1.35105)

[node name="head_ray" type="RayCast3D" parent="Armature" index="1"]
transform = Transform3D(1, 0, 0, 0, -3.61999e-06, 1, 0, -1, -3.61999e-06, -4.64461e-07, 5.73943, 0.0152628)
target_position = Vector3(0, 0, 1.6)
collision_mask = 11

[node name="Skeleton3D" parent="Armature" index="2"]
bones/0/rotation = Quaternion(0.000571237, 0, 0, 1)
bones/1/rotation = Quaternion(0.00573413, 0, 0, 0.999984)
bones/2/rotation = Quaternion(-0.00643723, 0, 0, 0.999979)
bones/3/rotation = Quaternion(0.00158924, 1.19209e-07, 1.8945e-10, 0.999999)
bones/11/rotation = Quaternion(0.575427, 0.410955, 0.575427, -0.410955)
bones/13/rotation = Quaternion(2.94899e-08, 8.70966e-09, -0.353799, 0.935321)
bones/14/rotation = Quaternion(0.575427, -0.410955, -0.575427, -0.410955)
bones/16/rotation = Quaternion(-4.0178e-08, 1.40928e-08, -0.33745, 0.941343)

[node name="Cylinder_001" parent="Armature/Skeleton3D" index="0"]
transform = Transform3D(1, 0, 0, 0, 0.99992, -0.0126105, 0, 0.0126105, 0.99992, 0.00295258, -0.208636, -0.247492)

[node name="Cylinder_001" parent="Armature/Skeleton3D/Cylinder_001" index="0"]
unique_name_in_owner = true
surface_material_override/0 = SubResource("StandardMaterial3D_rjbg5")

[node name="Sphere_006" parent="Armature/Skeleton3D" index="1"]
transform = Transform3D(1, 0, 0, 0, 0.99992, -0.0126105, 0, 0.0126105, 0.99992, 0.00295258, -0.208198, -0.282253)

[node name="Sphere_006" parent="Armature/Skeleton3D/Sphere_006" index="0"]
unique_name_in_owner = true
surface_material_override/0 = SubResource("StandardMaterial3D_jlp0p")

[node name="Sphere_007" parent="Armature/Skeleton3D" index="2"]
transform = Transform3D(1, 0, 0, 0, 0.99992, -0.0126105, 0, 0.0126105, 0.99992, 0.00295258, -0.208263, -0.277133)

[node name="Sphere_007" parent="Armature/Skeleton3D/Sphere_007" index="0"]
unique_name_in_owner = true
surface_material_override/0 = SubResource("StandardMaterial3D_54cco")

[node name="Cylinder_003" parent="Armature/Skeleton3D" index="3"]
unique_name_in_owner = true
surface_material_override/0 = SubResource("StandardMaterial3D_1s7kv")

[node name="Sphere_004" parent="Armature/Skeleton3D" index="4"]
unique_name_in_owner = true
surface_material_override/0 = SubResource("StandardMaterial3D_xl24l")

[node name="RemoteTransform3D" type="RemoteTransform3D" parent="Armature/Skeleton3D/Sphere_004" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.26998, 0)
remote_path = NodePath("../../../../CollisionShape3D2")

[node name="Sphere_008" parent="Armature/Skeleton3D" index="5"]
unique_name_in_owner = true
surface_material_override/0 = SubResource("StandardMaterial3D_wlet6")

[node name="collisions_anim_player" type="AnimationPlayer" parent="." index="4"]
libraries = {
&"": SubResource("AnimationLibrary_s3rjt")
}

[node name="AnimationTree" type="AnimationTree" parent="." index="5"]
tree_root = SubResource("AnimationNodeStateMachine_ktfy6")
anim_player = NodePath("../AnimationPlayer")
parameters/conditions/has_appeared = false
parameters/conditions/is_tilting = false

[node name="exclamation_mark" type="MeshInstance3D" parent="." index="6"]
transform = Transform3D(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0)
mesh = ExtResource("3_j1wi6")

[node name="AnimationPlayer" type="AnimationPlayer" parent="exclamation_mark" index="0"]
libraries = {
&"": SubResource("AnimationLibrary_vq8e1")
}

[node name="player_y_pos" type="Marker3D" parent="." index="7"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.02888, 0)

[node name="Timer" type="Timer" parent="." index="8"]
wait_time = 0.7

[node name="body_particles" type="GPUParticles3D" parent="." index="9"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.23299, 0)
visible = false
amount = 11
process_material = SubResource("ParticleProcessMaterial_xl24l")
draw_pass_1 = SubResource("SphereMesh_wlet6")

[node name="head_particles" type="GPUParticles3D" parent="." index="10"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5.25895, 0)
visible = false
amount = 6
process_material = SubResource("ParticleProcessMaterial_rjbg5")
draw_pass_1 = SubResource("SphereMesh_3omdm")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
